# cgpdata

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 223914636249_new_datafiles_table.py  baa457147ac2_layer_name_into_datafiles_table.py  d1588a99d9ae_blob_size_into_datafiles_table.py  e8650890600b_added_datafiles_table.py
cgpdata/: get_historical_data.py  write_datafiles.py
dags/:  yfinance_dag.py  alpha_vantage_dag.py  alphavantage_dag.py  bronze_dbt.py  bronze_to_silver.py  bronze_to_silver_dbt.py  demo_dag.py  external_table.py  load.py  sp500-yf.py  spy-alphavan.py  transform.py
dags/basic/: dbt_basics.py
dashboards_graf/: 25_03_14_dashboard_json.text
db_definitions/: crud.py  database.py  models.py  schemas.py
dbdefs/: crud.py  database.py  models.py  schemas.py
dbt_cgpdata/: dbt_project.yml  profiles.yml
dbt_cgpdata/models/bronze/: b_decimal_trans.sql  c_silver_trans.sql  d_bronze_staging_table.sql  schema.yml
dbt_cgpdata/models/example/: decimal_trans.sql  external_table_trans.sql  schema.yml  silver_trans.sql
dbt_cgpdata/models/silver/: schema.yml
docs/: ADR document 1.md  ADR document first draft.md  bronze_data.md  changing_python_version.md  technical_docs.md
docs/dbt_lewagon/: profiles.yml
gcp/: dataprocessor_permissions.yaml
notebooks/: apis_exploratory.ipynb  check_data_and_enter_into_db.ipynb  get_historical.ipynb  sql_query_record.ipynb
scripts/: entrypoint.sh
scripts/db_init/: 01-init.sh
src/extract/: alphavan.py  fetch_data.py  upload_gcs.py  yfinance.py
