[tool.poetry]
name = "cgpdata"
version = "0.1.0"
description = "Data Warehousing for CondorGP"
authors = ["Hugh Harford <hugh.harford@poscoconsulting.com>"]
license = "tbc"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.13"
dbt-bigquery = "^1.9.1"
psycopg2-binary = "^2.9.10"
apache-airflow-providers-google = "^14.0.0"
# apache-airflow = "^2.10.4"
# apache-airflow-providers-postgres = "^5.14.0"
# dbt-core = "^1.9.1"
# dbt-bigquery = "^1.9.0"
# pendulum = "^3.0.0"
# pyarrow = "19.0.1"
# numpy = ">=1.26.4"
dotenv = "^0.9.9"
yfinance = "^0.2.54"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
apache-airflow-providers-sqlite = "^4.0.0"
dockerfile = "^3.3.1"
pyyaml = "^6.0.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["optional: not required, nor saved in test_output.txt"]
